# Active-Robotic-Vision

./: CMakeLists.txt  Moveit.sh  PrepareRosService.sh  README.md  Run.sh  TrainVision.sh
SimulationObjectsInformation/: ObjectsDimensions.txt
SourceCode/: Classification.h  Classifier_Python.py  DataFusion.cpp  Detection.h  Display.cpp  Display.h  FeatureDescriptor.cpp  FeatureReduction.cpp  FeatureReduction.h  GlobalDefinitions.cpp  Localization3D.h  Matching.cpp  Morphology.cpp  Morphology.h  PlannerTraining.h  Planning.cpp  Planning.h  Preprocessing.cpp  RobotMovement.h  SimulationWorld.cpp  Snapshot.cpp  VideoRecorder.cpp  VisionTraining.cpp  VisionTraining.h  main.cpp
TrainingData/RealWorld/: Objects_List.txt
TrainingData/Simulation/: Objects_List.txt
devel/: _setup_util.py  setup.sh
devel/include/active_perception/: Vision_Message.h  Vision_Service.h  Vision_ServiceRequest.h  Vision_ServiceResponse.h
devel/include/active_vision_msgs/: Vision_Message.h  Vision_Service.h  Vision_ServiceRequest.h  Vision_ServiceResponse.h
devel/lib/pkgconfig/: active_perception.pc  active_vision_msgs.pc
devel/lib/python2.7/dist-packages/active_perception/msg/: _Vision_Message.py  __init__.py
devel/lib/python2.7/dist-packages/active_perception/srv/: _Vision_Service.py  __init__.py
devel/lib/python2.7/dist-packages/active_vision_msgs/msg/: _Vision_Message.py
devel/lib/python2.7/dist-packages/active_vision_msgs/srv/: _Vision_Service.py
devel/share/active_perception/cmake/: active_perception-msg-extras.cmake  active_perception-msg-paths.cmake  active_perceptionConfig.cmake
devel/share/active_vision_msgs/cmake/: active_vision_msgs-msg-extras.cmake  active_vision_msgsConfig.cmake
devel/share/common-lisp/ros/active_perception/msg/: Vision_Message.lisp  _package.lisp  _package_Vision_Message.lisp  active_perception-msg.asd
devel/share/common-lisp/ros/active_perception/srv/: Vision_Service.lisp  _package.lisp  _package_Vision_Service.lisp  active_perception-srv.asd
devel/share/common-lisp/ros/active_vision_msgs/msg/: Vision_Message.lisp
devel/share/common-lisp/ros/active_vision_msgs/srv/: _package_Vision_Service.lisp  active_vision_msgs-srv.asd
devel/share/gennodejs/ros/active_perception/msg/: Vision_Message.js  _index.js
devel/share/gennodejs/ros/active_perception/srv/: Vision_Service.js  _index.js
devel/share/gennodejs/ros/active_vision_msgs/srv/: Vision_Service.js
devel/share/roseus/ros/active_perception/: manifest.l
devel/share/roseus/ros/active_perception/msg/: Vision_Message.l
devel/share/roseus/ros/active_perception/srv/: Vision_Service.l
devel/share/roseus/ros/active_vision_msgs/: manifest.l
devel/share/roseus/ros/active_vision_msgs/srv/: Vision_Service.l
other/: ROS_Depth_Camera_Driver_Settings  ROS_Environment_Variables.sh  active_perception.epf  active_perception.xml  catkin_make_for_iai.txt  cmake_update_for_eclipse.txt.  running_kinect2_bridge.txt
src/active_perception/: .cproject  .project  Build.sh  CMakeCache.txt  CTestTestfile.cmake  Gazebo.sh  Makefile  RealPR2Setup.sh  cmake_install.cmake  package.xml
src/active_perception/.csettings/: cdt.managedbuild.toolchain.gnu.base.1972172083_cdtBuildSystem  cdt.managedbuild.toolchain.gnu.base.1972172083_org.eclipse.cdt.core.settings  org.eclipse.cdt.core.default.config.1_org.eclipse.cdt.make.core.buildtargets
src/active_perception/LearningModels/RealWorld/LDA/: LDA.yml
src/active_perception/LearningModels/RealWorld/PCA/: PCA.yml
src/active_perception/LearningModels/RealWorld/SVM/: Labels-Book.yml  SVM.pkl
src/active_perception/LearningModels/RealWorld/SVM/Dempster-Shafer/: SVM.pkl
src/active_perception/LearningModels/Simulation/LDA/: LDA.yml
src/active_perception/LearningModels/Simulation/PCA/: PCA.yml
src/active_perception/LearningModels/Simulation/SVM/: Labels-Book.yml  SVM.pkl
src/active_perception/SourceCode/: CMakeLists.txt  CTestTestfile.cmake  Classification.cpp  ConfidenceCheck.cpp  ConfidenceCheck.h  DataFusion.h  Detection.cpp  FeatureDescriptor.h  GlobalDefinitions.h  Localization3D.cpp  Makefile  Matching.h  PlannerTraining.cpp  Preprocessing.h  PythonCppConvertor.cpp  PythonCppConvertor.h  ROS.cpp  ROS.h  RobotMovement.cpp  SimulationWorld.h  Snapshot.h  Termination.cpp  Termination.h  Timer.cpp  Timer.h  TrackingManagement.cpp  TrackingManagement.h  VideoRecorder.h  VisionTraining_Python.py  cmake_install.cmake
src/vision_msgs/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
src/vision_msgs/catkin_generated/: active_vision_msgs-msg-extras.cmake.installspace.in  generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
src/vision_msgs/catkin_generated/installspace/: active_vision_msgs-msg-paths.cmake  active_vision_msgs.pc  active_vision_msgsConfig.cmake
src/vision_msgs/catkin_generated/stamps/active_vision_msgs/: package.xml.stamp
src/vision_msgs/cmake/: active_vision_msgs-genmsg-context.py  active_vision_msgs-genmsg.cmake
src/vision_msgs/devel/: .catkin  .rosinstall  setup.sh
src/vision_msgs/devel/include/active_vision_msgs/: Vision_Message.h  Vision_ServiceRequest.h  Vision_ServiceResponse.h
src/vision_msgs/devel/lib/pkgconfig/: active_vision_msgs.pc
src/vision_msgs/devel/share/active_vision_msgs/cmake/: active_vision_msgs-msg-paths.cmake  active_vision_msgsConfig.cmake
src/vision_msgs/devel/share/common-lisp/ros/active_vision_msgs/msg/: _package.lisp  _package_Vision_Message.lisp  active_vision_msgs-msg.asd
src/vision_msgs/devel/share/common-lisp/ros/active_vision_msgs/srv/: Vision_Service.lisp  _package.lisp
src/vision_msgs/devel/share/gennodejs/ros/active_vision_msgs/msg/: Vision_Message.js
src/vision_msgs/devel/share/roseus/ros/active_vision_msgs/: manifest.l
src/vision_msgs/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/vision_msgs/gtest/gtest/: CTestTestfile.cmake  Makefile
src/vision_msgs/msg/: Vision_Message.msg
src/vision_msgs/srv/: Vision_Service.srv
(+1 files in other folders)
